--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/WidgetPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/WidgetPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page 
+﻿<Page x:Name="page" 
     x:Class="MeiTuTieTie.Pages.WidgetPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,92 +6,160 @@
     xmlns:util="using:Shared.Utility"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:sharedControl="using:Shared.Control"
     mc:Ignorable="d"
     NavigationCacheMode="Required">
 
     <Page.Resources>
-        <ControlTemplate x:Name="widgetPivotItemTemplate" TargetType="PivotItem">
-            <ScrollViewer>
-                <ItemsControl ItemsSource="{Binding}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <WrapGrid Orientation="Horizontal" HorizontalAlignment="Left"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Grid >
-                                <Image Stretch="Uniform"
-                                       util:IsoImg.Path="{Binding image}" Margin="12"/>
-                            </Grid>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </ScrollViewer>
-        </ControlTemplate>
-
-        <ControlTemplate x:Name="widgetPivotItemTemplate_performance" TargetType="ContentControl">
-            <ScrollViewer>
-                <ItemsControl ItemsSource="{Binding}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <VirtualizingStackPanel/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Grid Height="{StaticResource MaterialHeight}">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-                                <Image Grid.Column="0" Stretch="Uniform" Tapped="material_Tapped" Tag="one" util:IsoImg.Path="{Binding ItemOne.thumbnail}" Margin="12,0,0,12"/>
-                                <Image Grid.Column="1" Stretch="Uniform" Tapped="material_Tapped" Tag="two" util:IsoImg.Path="{Binding ItemTwo.thumbnail}" Margin="12,0,0,12"/>
-                                <Image Grid.Column="2" Stretch="Uniform" Tapped="material_Tapped" Tag="three" util:IsoImg.Path="{Binding ItemThree.thumbnail}" Margin="12,0,12,12"/>
-                            </Grid>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </ScrollViewer>
-        </ControlTemplate>
     </Page.Resources>
 
     <Grid x:Name="rootGrid" Background="White">
+    	<VisualStateManager.VisualStateGroups>
+    		<VisualStateGroup x:Name="vsgAppBar">
+    			<VisualState x:Name="vsKeai">
+    				<Storyboard>
+    					<DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="rect1" d:IsOptimized="True"/>
+    				</Storyboard>
+    			</VisualState>
+    			<VisualState x:Name="vsWenzi">
+    				<Storyboard>
+    					<DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="rect2" d:IsOptimized="True"/>
+    				</Storyboard>
+    			</VisualState>
+    			<VisualState x:Name="vsGaoxiao">
+    				<Storyboard>
+    					<DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="rect3" d:IsOptimized="True"/>
+    				</Storyboard>
+    			</VisualState>
+    			<VisualState x:Name="vsZhedang">
+    				<Storyboard>
+    					<DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="rect4" d:IsOptimized="True"/>
+    				</Storyboard>
+    			</VisualState>
+    			<VisualState x:Name="vsKatong">
+    				<Storyboard>
+    					<DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="rect5" d:IsOptimized="True"/>
+    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Control.FontFamily)" Storyboard.TargetName="page">
+    						<DiscreteObjectKeyFrame KeyTime="0">
+    							<DiscreteObjectKeyFrame.Value>
+    								<FontFamily>Global User Interface</FontFamily>
+    							</DiscreteObjectKeyFrame.Value>
+    						</DiscreteObjectKeyFrame>
+    					</ObjectAnimationUsingKeyFrames>
+    				</Storyboard>
+    			</VisualState>
+    		</VisualStateGroup>
+    	</VisualStateManager.VisualStateGroups>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        
-        <Grid Grid.Row="0" >
-            <TextBlock x:Name="pageTitle" Style="{StaticResource PageTitle_Style}" Margin="16,16,0,16"/>
-        </Grid>
-        
-        <!--shipin-->
-        <Pivot x:Name="shipinPanel" Grid.Row="1" Visibility="Collapsed">
-            <Pivot.HeaderTemplate>
-                <DataTemplate>
-                    <Grid>
-                        <TextBlock Text="{Binding}" Foreground="Black" FontSize="24"/>
-                    </Grid>
-                </DataTemplate>
-            </Pivot.HeaderTemplate>
-            <PivotItem Template="{StaticResource widgetPivotItemTemplate_performance}" x:Name="pivotItem_1" Header="可爱" />
-            <PivotItem Template="{StaticResource widgetPivotItemTemplate_performance}" x:Name="pivotItem_2" Header="文字模板" />
-            <PivotItem Template="{StaticResource widgetPivotItemTemplate_performance}" x:Name="pivotItem_3" Header="搞笑表情" />
-            <PivotItem Template="{StaticResource widgetPivotItemTemplate_performance}" x:Name="pivotItem_4" Header="遮挡物" />
-            <PivotItem Template="{StaticResource widgetPivotItemTemplate_performance}" x:Name="pivotItem_5" Header="卡通形象" />
-        </Pivot>
-        
-        <!--biankuang-->
-        <Grid x:Name="biankuangPanel" Grid.Row="1" Visibility="Collapsed">
-            <ContentControl Template="{StaticResource widgetPivotItemTemplate_performance}"/>
+
+        <TextBlock x:Name="pageTitle" Style="{StaticResource PageTitle_Style}" Margin="16,16,0,16"/>
+
+        <ScrollViewer x:Name="scrollViewer" Grid.Row="1">
+            <ItemsControl x:Name="materialListBox" Margin="16,0,16,0">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Height="{StaticResource MaterialHeight}">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Border Background="#fff0f0f0" Grid.Column="0" Margin="16,0,0,10" Tapped="material_Tapped" Tag="one">
+                                <Image Stretch="Uniform" util:IsoImg.Path="{Binding ItemOne.thumbnail}" Margin="0,0,0,0"/>
+                            </Border>
+                            <Border Background="#fff0f0f0" Grid.Column="1" Margin="10,0,0,10" Tapped="material_Tapped" Tag="two">
+                                <Image Stretch="Uniform" util:IsoImg.Path="{Binding ItemTwo.thumbnail}" Margin="0,0,0,0"/>
+                            </Border>
+                            <Border Background="#fff0f0f0" Grid.Column="2" Margin="10,0,16,10" Tapped="material_Tapped" Tag="three">
+                                <Image Stretch="Uniform" util:IsoImg.Path="{Binding ItemThree.thumbnail}" Margin="0,0,0,0"/>
+                            </Border>
+                        </Grid>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </ScrollViewer>
+
+        <Grid x:Name="appBar" Grid.Row="2" Height="72" Background="#ffff7e7e">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            
+            <Rectangle x:Name="rect1" Grid.Column="0" Opacity="0">
+            	<Rectangle.Fill>
+            		<LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
+            			<GradientStop Color="#FFE06666" Offset="0"/>
+            			<GradientStop Offset="0.1" Color="#7FE06666"/>
+            			<GradientStop Color="#FFE06666" Offset="1"/>
+            			<GradientStop Offset="0.9" Color="#7FE06666"/>
+            		</LinearGradientBrush>
+            	</Rectangle.Fill>
+            </Rectangle>
+            <Rectangle x:Name="rect2" Grid.Column="1" Opacity="0">
+            	<Rectangle.Fill>
+            		<LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
+            			<GradientStop Color="#FFE06666" Offset="0"/>
+            			<GradientStop Offset="0.1" Color="#7FE06666"/>
+            			<GradientStop Color="#FFE06666" Offset="1"/>
+            			<GradientStop Offset="0.9" Color="#7FE06666"/>
+            		</LinearGradientBrush>
+            	</Rectangle.Fill>
+            </Rectangle>
+            <Rectangle x:Name="rect3" Grid.Column="2" Opacity="0">
+            	<Rectangle.Fill>
+            		<LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
+            			<GradientStop Color="#FFE06666" Offset="0"/>
+            			<GradientStop Offset="0.1" Color="#7FE06666"/>
+            			<GradientStop Color="#FFE06666" Offset="1"/>
+            			<GradientStop Offset="0.9" Color="#7FE06666"/>
+            		</LinearGradientBrush>
+            	</Rectangle.Fill>
+            </Rectangle>
+            <Rectangle x:Name="rect4" Grid.Column="3" Opacity="0">
+            	<Rectangle.Fill>
+            		<LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
+            			<GradientStop Color="#FFE06666" Offset="0"/>
+            			<GradientStop Offset="0.1" Color="#7FE06666"/>
+            			<GradientStop Color="#FFE06666" Offset="1"/>
+            			<GradientStop Offset="0.9" Color="#7FE06666"/>
+            		</LinearGradientBrush>
+            	</Rectangle.Fill>
+            </Rectangle>
+            <Rectangle x:Name="rect5" Grid.Column="4" Opacity="0">
+            	<Rectangle.Fill>
+            		<LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
+            			<GradientStop Color="#FFE06666" Offset="0"/>
+            			<GradientStop Offset="0.1" Color="#7FE06666"/>
+            			<GradientStop Color="#FFE06666" Offset="1"/>
+            			<GradientStop Offset="0.9" Color="#7FE06666"/>
+            		</LinearGradientBrush>
+            	</Rectangle.Fill>
+            </Rectangle>
+            
+            <sharedControl:BarButton Grid.Column="0" x:Name="appBarButton1" Icon="/Assets/Images/AppBar/AppBarKeai.png" Margin="10,0,10,0" 
+                                     Text="可爱" Click="appBarButton_Click"/>
+            <sharedControl:BarButton Grid.Column="1" x:Name="appBarButton2" Icon="/Assets/Images/AppBar/AppBarWenzi.png" Margin="10,0,10,0" 
+                                     Text="文字模板" Click="appBarButton_Click"/>
+            <sharedControl:BarButton Grid.Column="2" x:Name="appBarButton3" Icon="/Assets/Images/AppBar/AppBarGaoxiao.png" Margin="10,0,10,0" 
+                                     Text="搞笑表情" Click="appBarButton_Click"/>
+            <sharedControl:BarButton Grid.Column="3" x:Name="appBarButton4" Icon="/Assets/Images/AppBar/AppBarZhedang.png" Margin="10,0,10,0" 
+                                     Text="遮挡物" Click="appBarButton_Click"/>
+            <sharedControl:BarButton Grid.Column="4" x:Name="appBarButton5" Icon="/Assets/Images/AppBar/AppBarKatong.png" Margin="10,0,10,0" 
+                                     Text="卡通形象" Click="appBarButton_Click"/>
         </Grid>
 
-        <!--beijing-->
-        <Grid x:Name="beijingPanel" Grid.Row="1" Visibility="Collapsed">
-            <ContentControl Template="{StaticResource widgetPivotItemTemplate_performance}"/>
-        </Grid>
     </Grid>
 
 </Page>
